# Traj-LO

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_deps_ubuntu.sh  run_trajlo.cpp
data/: config_hesai.yaml  config_livox.yaml  config_ntu.yaml  config_ouster.yaml  config_pointlio.yaml  config_velodyne.yaml  imgui.ini
include/trajlo/core/: map_manager.h  odometry.h
include/trajlo/gui/: camera.h  shader.h  visualizer.h
include/trajlo/gui/glad/: glad.h
include/trajlo/gui/shader/: PCFragment.glsl  PCVertex.glsl  current_pc.glsl  fragmentShader.glsl  vertexShader.glsl
include/trajlo/io/: data_loader.h  rosbag_hesai.h  rosbag_livox.h  rosbag_ouster.h  rosbag_velodyne.h
include/trajlo/utils/: common_type.h  config.h  eigen_utils.hpp  pose_type.h  sophus_utils.hpp
scripts/: install_deps.sh  install_deps_macos.sh
src/core/: map_manager.cpp  odometry.cpp
src/gui/: glad.c  visualizer.cpp
src/io/: data_loader.cpp
src/utils/: config.cpp
